create a reuseable grid componen to use everywhere

--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
           </div>
         </div>
       </section>
+      <!-- HOW TO WORK SECTION  -->
+      <section class="section-how">
+        <div class="container grid grid--2--col">
+          <div>Text 1</div>
+          <div>Text 2</div>
+          <div>Text 3</div>
+          <div>Text 4</div>
+          <div>Text 5</div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
