--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <img class="logo" alt="Omnifood" src="img/omnifood-logo.png" />
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Section 1</a></li>
-          <li><a class="main-nav-link" href="#">Section 2</a></li>
-          <li><a class="main-nav-link" href="#">Section 3</a></li>
-          <li><a class="main-nav-link" href="#">Section 4</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+          <li><a class="main-nav-link" href="#">About</a></li>
+          <li><a class="main-nav-link" href="#">Works</a></li>
+          <li><a class="main-nav-link" href="#">Services</a></li>
+          <li><a class="main-nav-link" href="#">Contacts</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Start now</a></li>
         </ul>
       </nav>
     </header>
@@ -50,9 +50,9 @@
 
             <!-- Buttons -->
             <a href="#" class="btn btn--full margin-right-sm">
-              Start eating well</a
+              Start Eating Well</a
             >
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#" class="btn btn--outline">Learn More &darr;</a>
 
             <!-- Customer Photos and Text -->
             <div class="delivered-meals">
