create a feature-in section and using filter to convert color image to grey

--- a/index.html
+++ b/index.html
@@ -79,6 +79,41 @@
           </div>
         </div>
       </section>
+      <!-- FEATURE-IN SECTION -->
+      <section class="section-featured">
+        <div class="container">
+          <h2 class="heading-featured-in">As featured in</h2>
+          <div class="logos">
+            <img
+              class="featured-img"
+              src="img/logos/techcrunch.png"
+              alt="Techcrunch logo"
+            />
+            <img
+              class="featured-img"
+              src="img/logos/business-insider.png"
+              alt="Business insider logo"
+            />
+            <img
+              class="featured-img"
+              src="img/logos/the-new-york-times.png"
+              alt=" The NewYork City"
+            />
+
+            <img
+              class="featured-img"
+              src="img/logos/forbes.png"
+              alt="Forbes logo "
+            />
+            <img
+              class="featured-img"
+              src="img/logos/usa-today.png"
+              alt="USA today logo "
+            />
+          </div>
+        </div>
+      </section>
+
       <!-- HOW TO WORK SECTION  -->
       <section class="section-how">
         <!-- container for heading -->
