--- a/index.html
+++ b/index.html
@@ -28,22 +28,29 @@
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
 
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
+
+    <script defer src="js/script.js"></script>
+
     <title>Omnifood</title>
   </head>
   <body>
     <!-- nav-open -->
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img class="logo" alt="Omnifood" src="img/omnifood-logo.png" />
       </a>
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#testimonial">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#price">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
 
@@ -72,10 +79,10 @@
             </p>
 
             <!-- Buttons -->
-            <a href="#" class="btn btn--full margin-right-sm">
+            <a href="#cta" class="btn btn--full margin-right-sm">
               Start Eating Well</a
             >
-            <a href="#" class="btn btn--outline">Learn More &darr;</a>
+            <a href="#how" class="btn btn--outline">Learn More &darr;</a>
 
             <!-- Customer Photos and Text -->
             <div class="delivered-meals">
@@ -103,7 +110,7 @@
         </div>
       </section>
       <!-- FEATURE-IN SECTION -->
-      <section class="section-featured">
+      <section class="section-featured" id="featured">
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
           <div class="logos">
@@ -138,7 +145,7 @@
       </section>
 
       <!-- HOW TO WORK SECTION  -->
-      <section class="section-how">
+      <section class="section-how" id="how">
         <!-- container for heading -->
         <div class="container">
           <span class="subheading">How it works</span>
@@ -211,7 +218,7 @@
       </section>
 
       <!-- MEALS SECTION  -->
-      <section class="section-meals">
+      <section class="section-meals" id="meals">
         <!-- container for meals -->
         <div class="container center-text">
           <span class="subheading">Meals</span>
@@ -346,7 +353,7 @@
       </section>
 
       <!-- Testimonial Section -->
-      <section class="section-testimonial">
+      <section class="section-testimonial" id="testimonial">
         <div class="testimonial-container">
           <span class="subheading">Testimonials</span>
           <h2 class="heading-secondary">Once you try it, you can't go back.</h2>
@@ -496,7 +503,7 @@
         </div>
       </section>
       <!--  PRICE SECTION -->
-      <section class="section-pricing">
+      <section class="section-pricing" id="price">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
@@ -613,7 +620,7 @@
         </div>
       </section>
       <!--  CALL TO ACTION -->
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
@@ -708,7 +715,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
+            All rights reserved.
           </p>
         </div>
         <div class="address-col">
