--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food subscription that will make you healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs."
+    />
+    <!-- /////////////// -->
+    <!--  Fav for desctop -->
+    <link rel="icon" href="img/favicon.png" />
+    <!-- fav for IOS devices -->
+    <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+    <!-- fav for Android devices -->
+    <link rel="manifest" href="manifest.webmanifest" />
 
+    <!-- /////////////// -->
+    <!--   -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -35,7 +48,7 @@
 
     <script defer src="js/script.js"></script>
 
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again.</title>
   </head>
   <body>
     <!-- nav-open -->
@@ -101,11 +114,16 @@
             </div>
           </div>
           <div class="hero-image-box">
-            <img
-              src="img/hero.png"
-              class="hero-img"
-              alt="Woman enjoying food, mealis in storage container"
-            />
+            <!--  for does browser that can not display .webp will show png version -->
+            <picture>
+              <source srcset="img/hero.webp" type="image/webp" />
+              <source srcset="img/hero-min.png" type="image/png" />
+              <img
+                src="img/hero-min.png"
+                class="hero-img"
+                alt="Woman enjoying food, mealis in storage container"
+              />
+            </picture>
           </div>
         </div>
       </section>
